refactor: add semantic tags according to rule 1.1 in html-and-css-extended.md

--- a/style.css
+++ b/style.css
@@ -63,8 +63,7 @@ button{
   color: #3a3a3a;
 }
 /* Heading */
-.task-title,
-.label-new-task {
+.task-title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -90,7 +89,7 @@ button{
 }
 
 /* New Task */
-.label-new-task {
+#adding-element-to-list .task-title {
   display: block;
   margin: 0 0 20px;
 }
